; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_esp_rijndael.c_esp_gcm_decrypt_finalize.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_esp_rijndael.c_esp_gcm_decrypt_finalize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.secasvar = type { i32 }
%struct.TYPE_2__ = type { i32 }

@ESP_GCM_ALIGN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_gcm_decrypt_finalize(%struct.secasvar* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.secasvar*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_2__*, align 8
  store %struct.secasvar* %0, %struct.secasvar** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.secasvar*, %struct.secasvar** %4, align 8
  %9 = getelementptr inbounds %struct.secasvar, %struct.secasvar* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @ESP_GCM_ALIGN, align 4
  %12 = call i64 @P2ROUNDUP(i32 %10, i32 %11)
  %13 = inttoptr i64 %12 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %13, %struct.TYPE_2__** %7, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @aes_decrypt_finalize_gcm(i8* %14, i32 %15, i32 %18)
  ret i32 %19
}

declare dso_local i64 @P2ROUNDUP(i32, i32) #1

declare dso_local i32 @aes_decrypt_finalize_gcm(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
